CMAKE_MINIMUM_REQUIRED(VERSION 2.6) 
PROJECT(TEST) 
SET(obj server)   
INCLUDE_DIRECTORIES(./ThreadPool ./Parser)
ADD_SUBDIRECTORY(./ThreadPool)
ADD_SUBDIRECTORY(./Parser)
SET(CMAKE_CXX_COMPILER "g++") 
SET(CMAKE_CXX_FLAGS "-g -Wall -std=c++0x -lpthread") 
AUX_SOURCE_DIRECTORY(. SRC_LIST)  
ADD_EXECUTABLE(${obj} ${SRC_LIST})  #生成应用程序
TARGET_LINK_LIBRARIES(${obj} Poollib Parserlib)